--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "celebrate": "^15.0.3",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "firebase-admin": "^13.0.2"
