--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "celebrate": "^15.0.3",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "firebase": "^11.3.0",
     "firebase-admin": "^13.0.2"
   },
   "devDependencies": {
