--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "ecommerce-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "exports": "./lib/index.js",
+  "type": "module",
+  "engines": {
+    "node": "22"
+  },
   "scripts": {
     "start": "npx tsc-watch --onSuccess \"node --env-file=.env ./lib/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,11 +18,12 @@
     "celebrate": "^15.0.3",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "file-type": "^20.3.0",
     "firebase": "^11.3.0",
     "firebase-admin": "^13.0.2"
   },
   "devDependencies": {
-    "@tsconfig/recommended": "^1.0.8",
+    "@tsconfig/node22": "^22.0.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.5",
     "tsc-watch": "^6.2.1",
