--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@tsconfig/node22/tsconfig.json",
+  "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
     "rootDir": "src", // Diretório de códigos TypeScript
     "outDir": "lib", // Diretório de saída para os arquivos compilados
@@ -8,7 +8,9 @@
     "noImplicitReturns": true, // Verifica se todas as funções possuem tipo de retorno informado
     "noEmitOnError": true, // Não gera o código JS caso haja algum erro durante o processo de compilação
     "strictNullChecks": true, // Força a verificação de valores null ou undefined
-    "noUnusedLocals": true // Sinaliza quando existem variáveis declaradas e não utilizadas
+    "noUnusedLocals": true, // Sinaliza quando existem variáveis declaradas e não utilizadas
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
   },
   "compileOnSave": true,
   "include": ["src/**/*"],
